height bug fixed

--- a/pages/3star.html
+++ b/pages/3star.html
@@ -9,12 +9,12 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
-    <div class="w-[1536px] h-[686px] relative bg-[#ebebeb]">
+<body class="bg-[#ebebeb]">
+    <div>
         <p class="w-[935px] absolute left-7 top-0 text-[61.224754333496094px] font-semibold text-left text-black">
             Best Selling Packages
         </p>
-        <div class="w-[382px] h-[478px]">
+        <div class="w-[382px]">
             <div class="w-[382px] h-[478px] absolute left-[42.5px] top-[124.5px] rounded-[23px] bg-white"
                 style="box-shadow: 6px 4px 14px 0 rgba(0,0,0,0.25);"></div>
             <img src="https://images.unsplash.com/photo-1512343879784-a960bf40e7f2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80"
@@ -49,7 +49,7 @@
                 Goa
             </p>
         </div>
-        <div class="w-[382px] h-[478px]">
+        <div class="w-[382px]">
             <div class="w-[382px] h-[478px] absolute left-[557.5px] top-[124.5px] rounded-[23px] bg-white"
                 style="box-shadow: 6px 4px 14px 0 rgba(0,0,0,0.25);"></div>
             <img src="https://images.unsplash.com/photo-1583727638625-8ab3ee2b8a25?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
@@ -82,7 +82,7 @@
                 Goa
             </p>
         </div>
-        <div class="w-[382px] h-[478px]">
+        <div class="w-[382px]">
             <div class="w-[382px] h-[478px] absolute left-[1072.5px] top-[124.5px] rounded-[23px] bg-white"
                 style="box-shadow: 6px 4px 14px 0 rgba(0,0,0,0.25);"></div>
             <img src="https://images.unsplash.com/photo-1616843470319-97ea04cfa652?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1331&q=80"
