--- a/pages/5star.html
+++ b/pages/5star.html
@@ -9,14 +9,14 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
-    <div class="w-[1536px] h-[686px] relative bg-[#ebebeb]">
+<body  class="bg-[#ebebeb]">
+    <div>
         <p
           class="w-[935px] absolute left-7 top-0 text-[61.224754333496094px] font-semibold text-left text-black"
         >
           Best Selling Packages
         </p>
-        <div class="w-[382px] h-[478px]">
+        <div class="w-[382px]">
           <div
             class="w-[382px] h-[478px] absolute left-[42.5px] top-[124.5px] rounded-[23px] bg-white"
             style="box-shadow: 6px 4px 14px 0 rgba(0,0,0,0.25);"
@@ -63,7 +63,7 @@
             Goa
           </p>
         </div>
-        <div class="w-[382px] h-[478px]">
+        <div class="w-[382px]">
           <div
             class="w-[382px] h-[478px] absolute left-[557.5px] top-[124.5px] rounded-[23px] bg-white"
             style="box-shadow: 6px 4px 14px 0 rgba(0,0,0,0.25);"
@@ -110,7 +110,7 @@
             Goa
           </p>
         </div>
-        <div class="w-[382px] h-[478px]">
+        <div class="w-[382px]">
           <div
             class="w-[382px] h-[478px] absolute left-[1072.5px] top-[124.5px] rounded-[23px] bg-white"
             style="box-shadow: 6px 4px 14px 0 rgba(0,0,0,0.25);"
