--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>English Project</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <div><figure class="bg-slate-100 rounded-xl p-8 dark:bg-slate-800"> <a href="/pages/hotels.html">
+<body class="bg-slate-100 pt-44">
+    <div class="flex justify-center object-center">
+      <figure class="rounded-xl"> <a href="/pages/hotels.html">
         <img class="w-54 rounded-full mx-auto" src="https://static.toiimg.com/photo/82482422.cms" alt="" width="384" height="512">  </a>
         <div class="pt-7 text-center space-y-4">
           <figcaption class="font-medium">
-            <div class="text-sky-500 dark:text-sky-400">
+            <div class="text-sky-500 font-bold text-4xl">
               Goa
           </figcaption>
         </div>
